--- a/app/views/bookings/new.html.haml
+++ b/app/views/bookings/new.html.haml
@@ -1,7 +1,6 @@
-
 - provide(:title, 'New booking')
 - model_class = Booking
 .page-header
-  %h1 New booking
+  %h1=t('activerecord.attributes.booking.new')
 = render :partial => 'form'
 
