--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, 'Company')
 - model_class = Company
 .page-header
-  %h1=t 'companies.list'
+  %h1=t 'activerecord.attributes.company.list'
 
 
 .navbar.navbar-inverse
@@ -14,12 +14,12 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th{width: "8%"}=t 'companies.company_code'
-      %th{width: "20%"}=t 'companies.name'
-      %th{width: "28%"}=t 'companies.address'
-      %th{width: "12%"}=t 'companies.phone'
-      %th{width: "12%"}=t 'companies.fax'
-      %th{width: "20%"}=t 'companies.email'
+      %th{width: "8%"}=t 'activerecord.attributes.company.company_code'
+      %th{width: "20%"}=t 'activerecord.attributes.company.name'
+      %th{width: "28%"}=t 'activerecord.attributes.company.address'
+      %th{width: "12%"}=t 'activerecord.attributes.company.phone'
+      %th{width: "12%"}=t 'activerecord.attributes.company.fax'
+      %th{width: "20%"}=t 'activerecord.attributes.company.email'
       /%th User
       /%th College
       /%th Data
