--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, 'New Customer')
 - model_class = Customer
 .page-header
-  %h1=t('customers.edit')
+  %h1=t 'activerecord.attributes.customer.new'
 = render :partial => 'form'
 
