--- a/app/views/lecturers/_form.html.haml
+++ b/app/views/lecturers/_form.html.haml
@@ -3,33 +3,33 @@
     = render 'shared/error_messages', object: f.object
 
     .control-group
-      = f.label (t 'lecturers.name'), :class => 'control-label'
+      = f.label (t 'activerecord.attributes.lecturer.name'), :class => 'control-label'
       .controls= f.text_field :name, :class => 'text_field input-xxlarge'
 
     .control-group
-      = f.label (t 'lecturers.mykadno'), :class => 'control-label'
+      = f.label (t 'activerecord.attributes.lecturer.mykadno'), :class => 'control-label'
       .controls
         = f.text_field :mykadno, :class => 'text_field'
         .small Sample: 900102015500
     .control-group
-      = f.label (t 'lecturers.rate'), :class => 'control-label'
+      = f.label (t 'activerecord.attributes.lecturer.rate'), :class => 'control-label'
       .controls
         = f.text_field :rate, :class => 'text_field'  
-        .small=t 'lecturers.rate_currency'
+        .small=t 'activerecord.attributes.lecturer.rate_currency'
 
     .control-group
-      = f.label (t 'lecturers.position'), :class => 'control-label'
+      = f.label (t 'activerecord.attributes.lecturer.position'), :class => 'control-label'
       .controls= f.text_field :position, :class => 'text_field'
     .control-group
-      = f.label (t 'lecturers.address'), :class => 'control-label'
+      = f.label (t 'activerecord.attributes.lecturer.address'), :class => 'control-label'
       .controls= f.text_area :address, :class => 'text_field input-xxlarge' 
 
     .control-group
-      = f.label (t 'lecturers.qualifications'), :class => 'control-label'
+      = f.label (t 'activerecord.attributes.lecturer.qualifications'), :class => 'control-label'
       .controls= f.text_area :qualifications, :class => 'text_field input-xxlarge' 
 
     .control-group
-      = f.label (t 'lecturers.experiences'), :class => 'control-label'
+      = f.label (t 'activerecord.attributes.lecturer.experiences'), :class => 'control-label'
       .controls= f.text_area :experiences, :class => 'text_field input-xxlarge' 
 
     .control-group
