--- a/app/views/lecturers/new.html.haml
+++ b/app/views/lecturers/new.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, 'New lecturer')
 - model_class = Lecturer
 .page-header
-  %h1 New lecturer
+  %h1=t 'activerecord.attributes.lecturer.new'
 = render :partial => 'form'
 
 
