--- a/app/views/locations/new.html.haml
+++ b/app/views/locations/new.html.haml
@@ -1,5 +1,5 @@
 - provide(:title, 'New location')
 - model_class = Location
 .page-header
-  %h1=t('locations.new')
+  %h1=t 'activerecord.attributes.location.new'
 = render :partial => 'form'
