--- a/app/views/companies/_form.html.haml
+++ b/app/views/companies/_form.html.haml
@@ -4,32 +4,32 @@
 
 
     .control-group
-      = f.label :company_code, :class => 'control-label'
+      = f.label (t 'activerecord.attributes.company.company_code'), :class => 'control-label'
       .controls= f.text_field :company_code, :class => 'text_field '
 
     .control-group
-      = f.label :name, :class => 'control-label'
+      = f.label (t 'activerecord.attributes.company.name'), :class => 'control-label'
       .controls= f.text_field :name, :class => 'text_field '
     .control-group
-      = f.label :address, :class => 'control-label'
+      = f.label (t 'activerecord.attributes.company.address'), :class => 'control-label'
       .controls= f.text_field :address, :class => 'text_field '
     .control-group
-      = f.label :phone, :class => 'control-label'
+      = f.label (t 'activerecord.attributes.company.phone'), :class => 'control-label'
       .controls= f.text_field :phone, :class => 'text_field '
     .control-group
-      = f.label :fax, :class => 'control-label'
+      = f.label (t 'activerecord.attributes.company.fax'), :class => 'control-label'
       .controls= f.text_field :fax, :class => 'text_field '
     .control-group
-      = f.label :email, :class => 'control-label'
+      = f.label (t 'activerecord.attributes.company.email'), :class => 'control-label'
       .controls= f.text_field :email, :class => 'text_field '
     .control-group
-      = f.label :user_id, :class => 'control-label'
+      = f.label (t 'helpers.user_id'), :class => 'control-label'
       .controls= f.number_field :user_id, :class => 'text_field', :readonly => 'readonly'
     .control-group
-      = f.label :college_id, :class => 'control-label'
+      = f.label (t 'helpers.college_id'), :class => 'control-label'
       .controls= f.number_field :college_id, :class => 'text_field', :readonly => 'readonly'
     .control-group
-      = f.label :data, :class => 'control-label'
+      = f.label (t 'helpers.data'), :class => 'control-label'
       .controls= f.text_field :data, :class => 'text_field', :readonly => 'readonly'
 
     .form-actions
