--- a/app/views/companies/edit.html.haml
+++ b/app/views/companies/edit.html.haml
@@ -1,5 +1,5 @@
 - provide(:title, 'Edit company')
 - model_class = Company
 .page-header
-  %h1 Editing company
+  %h1=t 'activerecord.attributes.company.edit'
 = render :partial => 'form'
