--- a/app/views/companies/new.html.haml
+++ b/app/views/companies/new.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, 'New company')
 - model_class = Company
 .page-header
-  %h1 New company
+  %h1=t 'activerecord.attributes.company.new'
 = render :partial => 'form'
 
 
