--- a/app/views/courses/edit.html.haml
+++ b/app/views/courses/edit.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, 'Edit Course')
 - model_class = Course
 .page-header
-  %h1=t('courses.edit')
+  %h1=t('activerecord.attributes.course.edit')
 = render :partial => 'form'
 
