--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, 'Course')
 - model_class = Course
 .page-header
-  %h1=t('courses.list')
+  %h1=t('activerecord.attributes.course.list')
 
 .navbar.navbar-inverse
   .navbar-inner
@@ -14,12 +14,12 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th{width: "8%"}=t('courses.code')
-      %th{width: "20%"}=t('courses.category')
-      %th{width: "20%"}=t('courses.topic')
-      %th{width: "30%"}=t('courses.description')
-      %th{width: "10%"}=t('courses.fee')
-      %th{width: "12%"}=t('courses.duration')
+      %th{width: "8%"}=t('activerecord.attributes.course.code')
+      %th{width: "20%"}=t('activerecord.attributes.course.category')
+      %th{width: "20%"}=t('activerecord.attributes.course.topic')
+      %th{width: "30%"}=t('activerecord.attributes.course.description')
+      %th{width: "10%"}=t('activerecord.attributes.course.fee')
+      %th{width: "12%"}=t('activerecord.attributes.course.duration')
       /%th User
       /%th College
       /%th Data
