--- a/app/views/courses/new.html.haml
+++ b/app/views/courses/new.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, 'New course')
 - model_class = Course
 .page-header
-  %h1=t('courses.new')
+  %h1=t('activerecord.attributes.course.new')
 = render :partial => 'form'
 
 
