--- a/app/views/customers/edit.html.haml
+++ b/app/views/customers/edit.html.haml
@@ -1,5 +1,5 @@
 - provide(:title, 'Edit Customer')
 - model_class = Customer
 .page-header
-  %h1=t('customers.edit')
+  %h1=t 'activerecord.attributes.customer.edit'
 = render :partial => 'form'
