--- a/app/views/customers/index.html.haml
+++ b/app/views/customers/index.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, 'customer')
 - model_class = Customer
 .page-header
-  %h1=t('customers.list')
+  %h1=t('activerecord.attributes.customer.list')
 
 .navbar.navbar-inverse
   .navbar-inner
@@ -14,12 +14,12 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th{width: "8%"}=t('customers.id_no')
-      %th{width: "20%"}=t('customers.name')
-      %th{width: "20%"}=t('customers.email')
-      %th{width: "18%"}=t('customers.phone')
-      %th{width: "12%"}=t('customers.corporate')
-      %th{width: "22%"}=t('customers.company_id')
+      %th{width: "8%"}=t('activerecord.attributes.customer.id_no')
+      %th{width: "20%"}=t('activerecord.attributes.customer.name')
+      %th{width: "20%"}=t('activerecord.attributes.customer.email')
+      %th{width: "18%"}=t('activerecord.attributes.customer.phone')
+      %th{width: "12%"}=t('activerecord.attributes.customer.corporate')
+      %th{width: "22%"}=t('activerecord.attributes.customer.company_id')
       /%th User
       /%th College
       /%th Data
