--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -1,43 +1,43 @@
 - provide(:title, 'Customer Details')
 - model_class = Customer
 .page-header
-  %h1= t('customers.title')
+  %h1= t('activerecord.attributes.customer.title')
 %p#notice= notice
 
 %dl.dl-horizontal
-  %dt= t('customers.id_no')+":"
+  %dt= t('activerecord.attributes.customer.id_no')+":"
   %dd= @customer.id_no
 
 %dl.dl-horizontal
-  %dt= t('customers.name')+":"
+  %dt= t('activerecord.attributes.customer.name')+":"
   %dd= @customer.name
 
 %dl.dl-horizontal
-  %dt= t('customers.email')+":"
+  %dt= t('activerecord.attributes.customer.email')+":"
   %dd= @customer.email
 
 %dl.dl-horizontal
-  %dt= t('customers.phone')+":"
+  %dt= t('activerecord.attributes.customer.phone')+":"
   %dd= @customer.phone
 
 %dl.dl-horizontal
-  %dt= t('customers.corporate')+":"
+  %dt= t('activerecord.attributes.customer.corporate')+":"
   %dd= @customer.corporate? ? (t 'actions.yes') : (t 'actions.no')
 
 %dl.dl-horizontal
-  %dt= t('customers.company_id')+":"
+  %dt= t('activerecord.attributes.customer.company_id')+":"
   %dd= @customer.try(:clientcompany).try(:name)
 
 /%dl.dl-horizontal
-/  %dt= t('customers.user_id')+":"
+/  %dt= t('helpers.user_id')+":"
 /  %dd= @customer.user_id
 
 /%dl.dl-horizontal
-/  %dt= t('customers.college')+":"
+/  %dt= t('helpers.college')+":"
 /  %dd= @customer.college_id
 
 /%dl.dl-horizontal
-/  %dt= t('customers.data')+":"
+/  %dt= t('helpers.data')+":"
 /  %dd= @customer.data
 
 
