--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -13,34 +13,34 @@
       %ul.nav.navbar-nav{style: "padding-top:10px; margin-left:100px;"}
         %li.dropdown
           %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-            =t 'activerecord.models.courses'
+            =t 'main_menu.course'
             %b.caret
           %ul.dropdown-menu
-            %li= link_to (t 'courses.title'), courses_path
-            %li= link_to "Scheduling", schedules_path
-            %li= link_to "Bookings", bookings_path
+            %li= link_to (t 'activerecord.attributes.course.title'), courses_path
+            %li= link_to (t 'activerecord.models.schedule'), schedules_path
+            %li= link_to (t 'activerecord.models.booking'), bookings_path
             %li
               %a{:href => "#"} Course Blog
         %li.dropdown
           %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-            People
+            =t 'main_menu.people'
             %b.caret
           %ul.dropdown-menu
-            %li= link_to "Lecturers", lecturers_path
-            %li= link_to "Customers", customers_path
-            %li= link_to "Client Companies", companies_path
+            %li= link_to (t 'activerecord.models.lecturer'), lecturers_path
+            %li= link_to (t 'activerecord.models.customer'), customers_path
+            %li= link_to (t 'activerecord.models.company'), companies_path
 
         %li.dropdown
           %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-            Facilities
+            =t 'main_menu.facilities'
             %b.caret
           %ul.dropdown-menu
-            %li= link_to "Locations", locations_path
+            %li= link_to (t 'activerecord.models.location'), locations_path
             %li
               %a{:href => "#"} Assets
         %li.dropdown
           %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-            Reports
+            =t 'main_menu.reports'
             %b.caret
           %ul.dropdown-menu
             %li
@@ -49,7 +49,7 @@
               %a{:href => "#"} Resume Generator
             %li
               %a{:href => "#"} Assets
-        %li= link_to "Payments", payments_path
+        %li= link_to (t 'main_menu.payments'), payments_path
           
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown{style: "padding-top:10px; padding-right:60px;"}
