--- a/app/views/lecturers/edit.html.haml
+++ b/app/views/lecturers/edit.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, 'Edit Lecturer')
 - model_class = Lecturer
 .page-header
-  %h1 Editing lecturer
+  %h1=t 'activerecord.attributes.lecturer.edit'
 = render :partial => 'form'
 
 
