--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -3,15 +3,15 @@
     = render 'shared/error_messages', object: f.object
 
     .control-group
-      = f.label  t('locations.region'), :class => 'control-label'
+      = f.label  t('activerecord.attributes.location.region'), :class => 'control-label'
       .controls= f.select :region, DropDown::REGION,:include_blank => (t 'helpers.select'),  :class => 'selectpicker'
 
     .control-group
-      = f.label  t('locations.name'), :class => 'control-label'
+      = f.label  t('activerecord.attributes.location.name'), :class => 'control-label'
       .controls= f.text_field :name, :class => 'text_field '
 
     .control-group
-      = f.label  t('locations.description'), :class => 'control-label'
+      = f.label  t('activerecord.attributes.location.description'), :class => 'control-label'
       .controls= f.text_field :description, :class => 'text_field input-xxlarge'
 
     .control-group
