--- a/app/views/locations/edit.html.haml
+++ b/app/views/locations/edit.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, 'Edit Location')
 - model_class = Location
 .page-header
-  %h1=t('locations.edit')
+  %h1=t 'activerecord.attributes.location.edit'
 = render :partial => 'form'
 
