--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, 'Location')
 - model_class = Location
 .page-header
-  %h1=t('locations.list')
+  %h1=t('activerecord.attributes.location.list')
 
 .navbar.navbar-inverse
   .navbar-inner
@@ -14,9 +14,9 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th{width: "20%"}=t('locations.region')
-      %th{width: "40%"}=t('locations.name')
-      %th{width: "40%"}=t('locations.description')
+      %th{width: "20%"}=t('activerecord.attributes.location.region')
+      %th{width: "40%"}=t('activerecord.attributes.location.name')
+      %th{width: "40%"}=t('activerecord.attributes.location.description')
       /%th User
       /%th College
       /%th Data
