--- a/app/views/payments/edit.html.haml
+++ b/app/views/payments/edit.html.haml
@@ -1,5 +1,5 @@
 - provide(:title, 'Edit Payment')
 - model_class = Payment
 .page-header
-  %h1=t('payments.edit')
+  %h1=t('activerecord.attributes.payment.edit')
 = render :partial => 'form'
