--- a/app/views/payments/new.html.haml
+++ b/app/views/payments/new.html.haml
@@ -1,5 +1,5 @@
 - provide(:title, 'New Payment')
 - model_class = Payment
 .page-header
-  %h1=t('payments.new')
+  %h1=t('activerecord.attributes.payment.new')
 = render :partial => 'form'
