--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -26,7 +26,7 @@
       = f.label  t('activerecord.attributes.course.duration'), :class => 'control-label'
       .controls
         = f.number_field :duration, :class => 'text_field '
-        = f.select :duration_type, DropDown::DURATION_TYPE, :prompt => (t 'helpers.select')
+        = f.select :duration_type, DropDown::DURATION_TYPE, :include_blank => (t 'helpers.select')
 
     .control-group
       = f.label  t('helpers.user_id'), :class => 'control-label'
