Fix rate not exist

--- a/app/views/lecturers/index.html.haml
+++ b/app/views/lecturers/index.html.haml
@@ -33,7 +33,7 @@
         %td= lecturer.name
         %td= lecturer.mykadno
         %td= lecturer.position
-        %td= "RM "+(sprintf("%.2f", lecturer.rate)).to_s
+        %td= lecturer.rate.nil? ? "-" : "RM "+(sprintf("%.2f", lecturer.rate)).to_s
         %td= lecturer.qualifications.to_s.truncate(29)
         %td= lecturer.experiences.to_s.truncate(28)
         /%td= lecturer.address
