--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, 'Location Details')
 - model_class = Location
 .page-header
-  %h1= t('courses.title')
+  %h1= t('activerecord.attributes.location..title')
 %p#notice= notice
 
 %dl.dl-horizontal
