Stop unicorn remotely

--- a/app/views/schedules/edit.html.haml
+++ b/app/views/schedules/edit.html.haml
@@ -1,6 +1,5 @@
 - provide(:title, 'Edit Schedule')
 - model_class = Schedule
 .page-header
-  %h1=t('schedules.edit')
+  %h1=t('activerecords.attributes.schedule.edit')
 = render :partial => 'form'
-
